# wheresmyum

./: .dockerignore  Containerfile  README.md  buf.gen.yaml  buf.yaml  flake.nix  justfile  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1733370528092-e9ebda0c666f2.mjs
.github/workflows/: container.yml
app/components/: AddressComponent.tsx  Timestamp.tsx  Tx.tsx
app/routes/: _index.tsx
app/server/: registry.ts
app/server/database/: index.ts  schema.ts
app/server/grpc/: testServiceClient.ts  wmuServiceClient.ts
indexer/: Cargo.toml
indexer/src/: lib.rs  main.rs
indexer/src/transfers/: mod.rs  schema.sql
protobuf/proto/v1/: wheresmyum.proto
scripts/: protobuf-deps.sh
shared/: Transfer.ts
